import fonts and enter data to html

--- a/index.html
+++ b/index.html
@@ -6,10 +6,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Detailing</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="./src/scss/index.scss">
 </head>
 
 <body>
+    <header class="header">
+        <div class="header__logo-container">
+            <img src="./src/img/logo.png" alt="logo">
+        </div>
+        <p class="header__text">
+            Tel.: +48 600 700 800
+        </p>
+        <p class="header__text">
+            Mail: biuro@biuro.pl
+        </p>
+    </header>
+
+    <section class="hero">
+        <div class="hero__data">
+            <p class="hero__p">
+                car detailing & paint protection
+            </p>
+            <h1 class="hero__h1">
+                Witaj w studiu car detailingu.
+            </h1>
+            <button class="hero__button">
+                Zobacz nasze usługi
+            </button>
+        </div>
+        <div class="hero__image">
+            <img src="./src/img/image.png" alt="mercedes" class="hero__img">
+        </div>
+        <div class="hero__contact">
+            <button class="hero__contact-button">
+                Kontakt
+                <i class="fas fa-arrow-right"></i>
+            </button>
+        </div>
+    </section>
 
     <script src="./src/js/index.js"></script>
 </body>
