create hero desktop

--- a/index.html
+++ b/index.html
@@ -11,31 +11,33 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="header__logo-container">
-            <img src="./src/img/logo.png" alt="logo">
-        </div>
-        <p class="header__text">
-            Tel.: +48 600 700 800
-        </p>
-        <p class="header__text">
-            Mail: biuro@biuro.pl
-        </p>
-    </header>
-
     <section class="hero">
         <div class="hero__data">
-            <p class="hero__p">
-                car detailing & paint protection
-            </p>
-            <h1 class="hero__h1">
-                Witaj w studiu car detailingu.
-            </h1>
-            <button class="hero__button">
-                Zobacz nasze usługi
-            </button>
+            <header class="hero__header header">
+                <div class="header__logo-container">
+                    <img class="header__img" src="./src/img/logo.png" alt="logo">
+                </div>
+                <button class="header__button">
+                    Tel.: +48 600 700 800
+                </button>
+                <button class="header__button">
+                    Mail: biuro@biuro.pl
+                </button>
+            </header>
+
+            <div class="hero__data-container">
+                <p class="hero__p">
+                    car detailing & paint protection
+                </p>
+                <h1 class="hero__h1">
+                    Witaj w studiu car detailingu.
+                </h1>
+                <button class="hero__button">
+                    Zobacz nasze usługi
+                </button>
+            </div>
         </div>
-        <div class="hero__image">
+        <div class="hero__image-container">
             <img src="./src/img/image.png" alt="mercedes" class="hero__img">
         </div>
         <div class="hero__contact">
