--- a/index.html
+++ b/index.html
@@ -48,6 +48,44 @@
         </div>
     </section>
 
+    <div class="bar">
+        <div class="bar__button-container">
+            <button class="bar__arrow-button">
+                <i class="fas fa-arrow-down"></i>
+            </button>
+        </div>
+        <div class="bar__data">
+            <button class="bar__data-button">
+                <div class="bar__data-container">
+                    <p>
+                        new car detail & ppf protection
+                    </p>
+                    <h2>
+                        Mercedes-Benz GT-63 4 door AMG
+                    </h2>
+                </div>
+                <div class="bar__data-icon">
+                    <i class="fas fa-arrow-right"></i>
+                </div>
+            </button>
+
+        </div>
+        <div class="bar__links">
+            <a href="https://pl-pl.facebook.com/">
+                <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.youtube.com/?hl=PL">
+                <i class="fab fa-youtube"></i>
+            </a>
+            <a href="https://www.tiktok.com/pl-PL/">
+                <i class="fab fa-tiktok"></i>
+            </a>
+        </div>
+    </div>
+
     <script src="./src/js/index.js"></script>
 </body>
 
