--- a/index.html
+++ b/index.html
@@ -86,6 +86,26 @@
         </div>
     </div>
 
+    <nav class="nav">
+        <ul class="nav__ul">
+            <li class="nav__li">
+                <a href="#" class="nav__a">O nas</a>
+            </li>
+            <li class="nav__li">
+                <a href="#" class="nav__a">Usługi</a>
+            </li>
+            <li class="nav__li">
+                <a href="#" class="nav__a">Realizacje</a>
+            </li>
+            <li class="nav__li">
+                <a href="#" class="nav__a">Blog</a>
+            </li>
+            <li class="nav__li">
+                <a href="#" class="nav__a">Kontakt</a>
+            </li>
+        </ul>
+    </nav>
+
     <script src="./src/js/index.js"></script>
 </body>
 
