handle open and close menu

--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
         </ul>
     </nav>
 
+    <button class="hamburger-button">
+        menu
+    </button>
+
     <script src="./src/js/index.js"></script>
 </body>
 
