add readme and improve index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Zadanie rekrutacyjne">
+    <meta name="keywords" content="detailing, paint, car">
     <title>Car Detailing</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="./src/scss/index.scss">
@@ -50,7 +52,7 @@
 
     <div class="bar">
         <div class="bar__button-container">
-            <button class="bar__arrow-button">
+            <button class="bar__arrow-button" aria-label="go down">
                 <i class="fas fa-arrow-down"></i>
             </button>
         </div>
@@ -71,16 +73,16 @@
 
         </div>
         <div class="bar__links">
-            <a href="https://pl-pl.facebook.com/">
+            <a href="https://pl-pl.facebook.com/" aria-label="facebook">
                 <i class="fab fa-facebook"></i>
             </a>
-            <a href="https://www.instagram.com/">
+            <a href="https://www.instagram.com/" aria-label="instagram">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://www.youtube.com/?hl=PL">
+            <a href="https://www.youtube.com/?hl=PL" aria-label="youtube">
                 <i class="fab fa-youtube"></i>
             </a>
-            <a href="https://www.tiktok.com/pl-PL/">
+            <a href="https://www.tiktok.com/pl-PL/" aria-label="tiktok">
                 <i class="fab fa-tiktok"></i>
             </a>
         </div>
